fix horizontal scroll

--- a/style/layout.css
+++ b/style/layout.css
@@ -24,7 +24,8 @@ solution: make padding smaller, apparently */
 }
 
 html {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 h1,
